# kipu

./: .gitignore  default.nix  kipu.cabal
lib/Kipu/: Client.hs  Config.hs  JsonOptions.hs  Server.hs  Time.hs  Transform.hs  Types.hs  Utils.hs
lib/Kipu/GitHub/: Client.hs  Types.hs
lib/Kipu/GitHub/GraphQL/: Client.hs  Types.hs
lib/Kipu/GitHub/Rest/: Client.hs  Types.hs
lib/Kipu/Jira/: Api.hs  ApiTypes.hs  Client.hs  CustomTypes.hs  InsightTypes.hs  Types.hs
test/: ConfigTest.hs  IssueBeanTest.hs  TestUtils.hs  TimeTest.hs  TransformTest.hs
test/samples/config/: config-nocerts.yaml  config.yaml
