cabal-version:      3.0
name:               kipu
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Marco Benelli
maintainer:         mbenelli@fastmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Kipu.Client
      , Kipu.Config
      , Kipu.GitHub.Client
      , Kipu.GitHub.Types
      , Kipu.Jira.Api
      , Kipu.Jira.CustomTypes
      , Kipu.Jira.InsightTypes
      , Kipu.Jira.Types
      , Kipu.Server
      , Kipu.Time
      , Kipu.Transform
      , Kipu.Types
      , Kipu.Utils
    -- other-modules:
    -- other-extensions:
    build-depends:
        base
      , aeson
      , basic-prelude
      , bytestring
--      , connection
      , containers
      , data-default
      , directory
      , http-client
      , http-client-tls
      , mtl
      , pretty-simple
      , rot13
      , servant
      , servant-client
      , servant-server
      , req
      , text
      , time
      , tls
      , unordered-containers
      , warp
      , yaml
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite kipu-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        ConfigTest
      , IssueBeanTest
      , TimeTest
      , TransformTest
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , aeson
      , kipu
      , basic-prelude
      , bytestring
      , containers
      , HUnit
      , text
      , time
